--- a/WPF/Windows/MainWindow.xaml
+++ b/WPF/Windows/MainWindow.xaml
@@ -187,14 +187,27 @@
                 </Grid>
                 <StackPanel VerticalAlignment="Top" Background="{DynamicResource LightAccent}" DockPanel.Dock="Top" MaxHeight="500" Visibility="{Binding HasSelectedLayer, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <Label Content="{Binding LayerOptionsContent}" FontSize="14" Height="30" Margin="0,5,0,0"/>
-                    <WrapPanel Margin="5,0,5,5">
+                    <WrapPanel Margin="5,0,5,3">
                         <Label Content="{Binding LayerNameContent}" HorizontalAlignment="Left"/>
                         <TextBox TextWrapping="Wrap" Margin="5,3,3,3" Text="{Binding SelectedLayerName, Mode=TwoWay}" UndoLimit="0" MaxHeight="100" MinWidth="100" HorizontalAlignment="Left" MaxWidth="140"/>
                     </WrapPanel>
-                    <CheckBox Content="{Binding LayerVisibilityContent}" IsChecked="{Binding SelectedLayerVisibility, Mode=TwoWay}" HorizontalAlignment="Left" Padding="5,0,5,0" Margin="5,0,0,5" Style="{StaticResource ContentLeftCheckBoxStyle}" Foreground="{DynamicResource Text}"/>
+                    <CheckBox Content="{Binding LayerVisibilityContent}" IsChecked="{Binding SelectedLayerVisibility, Mode=TwoWay}" HorizontalAlignment="Left" Padding="5,0,5,0" Margin="5,0,0,3" Style="{StaticResource ContentLeftCheckBoxStyle}" Foreground="{DynamicResource Text}"/>
+                    <WrapPanel Margin="5,0,5,3">
+                        <Label Content="{Binding LayerOffsetContent}" HorizontalAlignment="Left"></Label>
+                        <Label Content="X" HorizontalAlignment="Left"></Label>
+                        <TextBox TextWrapping="Wrap" Margin="5,3,3,3" Text="{Binding LayerOffsetXText, Mode=TwoWay, ValidatesOnDataErrors=True}" UndoLimit="0" MaxHeight="100" MinWidth="20" HorizontalAlignment="Left" MaxWidth="40"/>
+                        <Label Content="Y" HorizontalAlignment="Left"></Label>
+                        <TextBox TextWrapping="Wrap" Margin="5,3,3,3" Text="{Binding LayerOffsetYText, Mode=TwoWay}" UndoLimit="0" MaxHeight="100" MinWidth="20" HorizontalAlignment="Left" MaxWidth="40"/>
+                    </WrapPanel>
+                    <WrapPanel Margin="5,0,5,3">
+                        <Label Content="{Binding LayerSizeContent}" HorizontalAlignment="Left"></Label>
+                        <Label Content="{Binding LayerSizeX}" Margin="5,0,3,0" HorizontalAlignment="Left"></Label>
+                        <Label Content="x" HorizontalAlignment="Left"></Label>
+                        <Label Content="{Binding LayerSizeY}" Margin="3,0,5,0" HorizontalAlignment="Left"></Label>                        
+                    </WrapPanel>
                 </StackPanel>
                 <Rectangle HorizontalAlignment="Stretch" Margin="2" Stroke="{DynamicResource Border}" DockPanel.Dock="Top" Visibility="{Binding HasSelectedLayer,Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                <ListBox VerticalContentAlignment="Top" DockPanel.Dock="Top" FontSize="14" SelectedIndex="{Binding SelectedLayerID, Mode=TwoWay}" ItemsSource="{Binding Layers}" VerticalAlignment="Top">
+                <ListBox VerticalContentAlignment="Top" DockPanel.Dock="Top" FontSize="14" SelectedIndex="{Binding SelectedLayerID, Mode=TwoWay}" ItemsSource="{Binding ArtFile.Art.ArtLayers}" VerticalAlignment="Top">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <WrapPanel>
