--- a/WPF/Windows/MainWindow.xaml
+++ b/WPF/Windows/MainWindow.xaml
@@ -84,6 +84,7 @@
                         </MenuItem>
                         <MenuItem Header="{Binding FiltersMenuContent, ElementName=MainWindowViewModel}">
                             <MenuItem Header="{Binding NoFiltersContent, ElementName=MainWindowViewModel}"></MenuItem>
+                            <MenuItem Header="Mirror"/>
                         </MenuItem>
                     </Menu>
                 </ToolBar>
