--- a/WPF/Windows/MainWindow.xaml
+++ b/WPF/Windows/MainWindow.xaml
@@ -85,6 +85,7 @@
                         <MenuItem Header="{Binding FiltersMenuContent, ElementName=MainWindowViewModel}">
                             <MenuItem Header="{Binding NoFiltersContent, ElementName=MainWindowViewModel}"></MenuItem>
                             <MenuItem Header="Mirror"/>
+                            <MenuItem Header="Outline"/>
                         </MenuItem>
                     </Menu>
                 </ToolBar>
